--- a/DD/main/glossary.tex
+++ b/DD/main/glossary.tex
@@ -9,3 +9,4 @@
 \newacronym{mvc}{MVC}{Model-View-Controller}
 \newacronym{json}{JSON}{JavaScript Object Notation}
 \newacronym{dbms}{DBMS}{Database Management System}
+\newacronym{rasd}{RASD}{Requirements Analysis and Specification Document}
