--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -1,6 +1,32 @@
 \chapter{Architectural Design}
 
 \section{Overview}
+The architecture that was chosen for our application is the three-tier one, because we think that this division is the most natural to represent it and is composed of: 
+\begin{itemize}
+	\item \textbf{Presentation tier:}It contains the user interface and the communication layer of the application. Its main purpose is to display information and 			collect information from the user.
+
+	\item \textbf{Application tier:}It is the core of the application. In this tier, information collected in the presentation tier is processed, sometimes against 			other information in the data tier to offer the different functionality and services.
+
+	\item \textbf{Data tier:} it is the tier that contains the database, and so its job is to store persistently and manage data processed by the application tier and 	make it available back at the application tier.
+\end{itemize}
+Since the application interface is light and does not require too much computational power to work.
+Instead the main services offered by our application requires the coordination of all clients a to manage the queue in real time and requires the elaboration of their real time data, and server data to predict their behaviour. It needs so a central component that has a high computational power to manage it and the logic tier describes it perfectly. The application needs to record a lot of data about the customers and so a data tier is required, this data will not only be collected by the app, but it will be also collected from the supermarket chain database.
+We chose the three-tier architecture also for its properties that are:
+\begin{itemize}
+	\item \textbf{Scalability:} Any tier can be scaled independently as needed without affecting the others.
+
+	\item \textbf{Security:}: : Since the presentation tier and the data tier are not directly connected, it is possible to implement firewalls preventing different 			kind of unwanted exploits
+
+	\item \textbf{Maintainability:}Since the three tiers works independently from each other, updates and maintenance can be done one tier at time without 			affecting the others and by only one team. 
+\end{itemize}
+In our case the three tiers will contain the following division:
+\begin{itemize}
+	\item \textbf{Presentation tier:} It will contain the interfaces showed in the mock-ups, and it will allow the users to send request for creating, deleting, and viewing line-up and booking ticket from them app. It will allow the physical spot to create and print the line-up ticket. It will allow the manager to do query on different kind of data and to interact with the realising of new ticket and people entrances. 
+
+	\item \textbf{Application tier:} It will contain the function to manage in real time the queue considering the realising time of the different kind of tickets, the position of the app-users, the presence of booking tickets. It will also contain the function to handle and to redirect the different kinds of the request on the appropriate component. And also, the function to check the QR code and allow user to enter, the function to build the visual representation of manager query, and the sign-up and login services.
+
+	\item \textbf{Data tier:} : It will contain the information about the users, their behaviour ( tendency to arrive later or early, typical staying time, etc) and all information that could help to improve the accuracy of predictions.
+\end{itemize}
 
 \begin{figure}[H]
 	\centering
@@ -56,6 +82,21 @@ In the diagram has been reported the external services used by the system:
 
 
 \section{Deployment View}
+\begin{itemize}
+	\item \textbf{Presentation tier:}In this tier we have the interfaces for the different users, the application contains all the interfaces and when the user log in the interfaces change to the proper one. For the customers, the interface permits the user to connect to the BookAVisitService, LiningUpService and ControlQueueService. In a similar way the physical spot interface permits it to connect to the Lining up service and to the feature to print. And for the manager the interface, it permits him to connect and use StaticsService, QRCodeCheckingService and ControlQueueService.
+
+	\item \textbf{Application tier:}: In this tier we have the application server that manages all the functions of Clup. Starting from handling all the user request and redirect them to the right service required, to sending request to database to retrieve and record data. Inside this server the function the require more resources are the handling of the request and the scheduling service. Since it requires to schedule first the different kind of user and then if possible, monitor their position in line and compute it to their records of past visit.
+
+	\item \textbf{Data tier:}In this tier the data service handles all the request coming from the application tier. It schedules the different request of transaction from the different services and manages it accordingly. So, it let them store, manage and query data of the Database. The model of DBMS used in this application is the relational one since it is the most well-known and used one. Therefore, there are a lot of tools and APIs up to date to support the work. It also fits the application requirements since it permits to compute quickly complex queries and help the data organise in a well-structured way. The first especially is needed for the scheduler, since it has to re-compute the data a lot of times during a day. 
+\end{itemize}
+In the application tier we have two main device that can contain the app, in particular the smartphone is associated to customers and the tablet to the physical spot and the store manager. The smartphone application also interacts via Google API with Google Firebase Service to receive the notifications from the system. The app of both the devices can connect to the application server, which must first pass through a firewall, to increase the security of the system and then through a load balancer to distribute the workload. 
+The application server is connected to both google services also through a firewall to retrieve the position of the user in line and to send notifications. It is connected to the grocery store service to retrieve information about user’s behaviour. And it is connected to also to Clup database to retrieve stats, queue information, reservation, etc. 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/deployment_view.png}
+	\caption{Deployment diagram}\label{fig:Deployment diagram}
+\end{figure}
 
 \section{Runtime View}
 
@@ -178,6 +219,13 @@ This is an activity that can be executed only by the store manager account, thus
 \end{figure}
 
 \section{Component Interfaces}
+In this section, it is proposed a diagram that shows the different interface and the method used. It also shows which of them may interact during different operations. \\
+The methods here shown are not supposed to be final but to give a hint of their function and suggest a possible way to implement them. 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{images/Component_class_diagram.png}
+	\caption{Component interface diagram}\label{fig:Component interface diagram}
+\end{figure}
 
 \section{Selected Architectural Styles and Patterns}
 
