ux diagram and minor changes

--- a/DD/main/Introduction.tex
+++ b/DD/main/Introduction.tex
@@ -1,10 +1,9 @@
 \chapter{Introduction}
 
 \section{Purpose}
-The purpose of this document is describing the Clup system in a more specific way than the RASD.
-Therefore, it is suggested to read ahead the RASD. This document is aimed both at stakeholders to view a preview of the final product, and at project managers as a guideline to follow.
-It describes the system by both showing high-level and in-depth analysis of it, and how these analyses affected the architectural design choices made. It also shows the division of the system in components describing how they work and interact, how they are necessary for the fulfilment of the requirements and how they will be implemented and in which order. 
-
+The purpose of this document is describing the \gls{clup} system in a more specific way than the \gls{rasd}.
+Therefore, it is suggested to read ahead the \gls{rasd}. This document is aimed both at stakeholders to view a preview of the final product, and at project managers as a guideline to follow.
+It describes the system by both showing high-level and in-depth analysis of it, and how these analyses affected the architectural design choices made. It also shows the division of the system in components describing how they work and interact, how they are necessary for the fulfillment of the requirements and how they will be implemented and in which order. 
 
 \section{Scope}
 Our application helps stores to prevent the diffusion of a virus, in a global pandemic situation, keeping customers in safety conditions.
@@ -43,6 +42,23 @@ This option requires optionally at people to point out which product categories 
 
 \section{Revision History}
 
+\begin{table}[H]
+\centering
+\begin{tabular}{ m{0.25\textwidth} | m{0.25\textwidth} } 
+	 \textbf{Date} & \textbf{Modifications} \\
+	\hline
+	\today & First version \\
+\end{tabular}
+\caption{Revision history table.}
+\label{table:revisionHistory}
+\end{table}
+
 \section{Reference Documents}
+
+\begin{itemize}
+	\item Specification document: "R \& DD Assignment AY2020-2021.pdf".
+	\item Slides of the lectures.
+	\item \gls{rasd}: "CLup - Customers Line-up Requirements Analysis and Specification Document.pdf"
+\end{itemize}
 
 \section{Documents Structure}
