--- a/DD/main/References.tex
+++ b/DD/main/References.tex
@@ -3,4 +3,5 @@
 \begin{itemize}
 	\item Specification document: "R \& DD Assignment AY2020-2021.pdf".
 	\item Slides of the lectures.
+	\item \gls{rasd}: "CLup - Customers Line-up Requirements Analysis and Specification Document.pdf"
 \end{itemize}
