--- a/DD/main/glossary.tex
+++ b/DD/main/glossary.tex
@@ -10,3 +10,4 @@
 \newacronym{json}{JSON}{JavaScript Object Notation}
 \newacronym{dbms}{DBMS}{Database Management System}
 \newacronym{rasd}{RASD}{Requirements Analysis and Specification Document}
+\newacronym{ux}{UX}{User Experience}
